updated master with PushNotification.js

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 		
 		<div id="cards"></div>
 
+        <script type="text/javascript" src="PushNotification.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
         <script type="text/javascript" src="js/materialize.min.js"></script>
