Updated splash image

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 </div>
                 <div class="loading_mask" id="load_light" style="position: fixed; top: 0px; left: 0px;">
                     <div class="loading_image">
-                    <div class="progress-bar-validation" style="display:none;">
+                    <div class="progress-bar-validation">
                     <img alt="loading your required product" src="http://54.169.245.192/kazo/skin/frontend/rwd/kazo/images/loading_p.gif">
                     <span> Loading... Please wait </span>
                     </div>
@@ -238,24 +238,24 @@
                       <span>Members Login Here</span>
                       <input type="hidden" name="form_type" value="signin" />
                       <input type="email" name="email" id="email" value="" placeholder="Email Address" required><br />
-                      <input type="password" placeholder="Password" name="password" required><br /><br />
+                      <input type="password" placeholder="Password" name="password" id="password" required><br /><br />
                       <button id="submit" name="submit" title="sigin" class="button" type="button" onClick="connectByEmail()"><span><span>Submit</span></span></button>
                     </form>
                     <form id="forgot-password-form" method="post" name="forgot-password-form" style="display:none;">
                       <span>Forgot Your Password?</span>
                       <input type="hidden" name="form_type" value="forgot-password" />
-                      <input type="email" name="email" id="email" value="" placeholder="Email Address" required><br />
+                      <input type="email" name="email" id="email_f" value="" placeholder="Email Address" required><br />
                       <button id="submit" name="submit" title="forgot-password" class="button" type="button" onClick="sendPasswordByEmail()"><span><span>Submit</span></span></button>
                     </form>
                     <form id="register-form" method="post" name="register-form" style="display:none;">
                       <span>Register Here</span>
                       <input type="hidden" name="form_type" value="register" />
-                      <input type="text" name="firstname" id="firstname" value="" placeholder="First Name" required><br />
-                      <input type="text" name="lastname" id="lastname" value="" placeholder="Last Name" required><br />
-                      <input type="text" name="mobile" id="mobile" value="" placeholder="Mobile Number" required><br />
-                      <input type="email" name="email" id="email" value="" placeholder="Email Address" required><br />
-                      <input type="password" name="password" placeholder="Password" id="password" required=""><br />
-                      <input type="password" name="confirm_password" placeholder="Confirm Password" id="confirm_password" required=""><br />
+                      <input type="text" name="firstname" id="firstname_r" value="" placeholder="First Name" required><br />
+                      <input type="text" name="lastname" id="lastname_r" value="" placeholder="Last Name" required><br />
+                      <input type="tel" name="mobile" id="mobile_r" value="" placeholder="Mobile Number" required maxlength="10"><br />
+                      <input type="email" name="email" id="email_r" value="" placeholder="Email Address" required><br />
+                      <input type="password" name="password" placeholder="Password" id="password_r" required=""><br />
+                      <input type="password" name="confirm_password" placeholder="Confirm Password" id="confirm_password_r" required=""><br />
                       <button id="submit" name="submit" title="forgot-password" class="button" type="button" onClick="registerByEmail()"><span><span>Submit</span></span></button>
                     </form>
                     <br />
@@ -307,17 +307,7 @@
         //
         var pushNotification;
         function onDeviceReady() {
-                window.plugins.googleplus.trySilentLogin(
-                    {},
-                    function (obj) {
-                      alert(JSON.stringify(obj)); // do something useful instead of alerting 
-                    },
-                    function (msg) {
-                      alert('error: ' + msg);
-                    }
-                );
-                $('.device-ready').hide();
-                $('.loader-div').show();
+                $('.progress-bar-validation').hide();
                 var push = PushNotification.init({ "android": {"senderID": "267514034297", "icon": "phonegap", "iconColor": "blue"},
          "ios": {"alert": "true", "badge": "true", "sound": "true"}, "windows": {} } );
          push.on('registration', function(data) {
@@ -425,15 +415,18 @@
         }
         
         function connectByEmail() {
-                //alert('ahhaa');
                 $('.progress-bar-validation').show();
+                var email = $('#email').val();
+                var password = $('#password').val();
+                if(email == ''){alert('Please enter your email');$('#email').focus();return;}
+                if(password == ''){alert('Please enter your password');$('#password').focus();return;}
                 var formId = '#login-access-form';
                 var form = $(formId); 
                 var params = form.serialize();
                 //alert(params);
                 $.ajax({
                   type: 'GET',
-                  url: 'http://54.169.245.192/kazo/script/gcm/connectedByEmail.php',
+                  url: 'http://54.169.245.192/kazo/connectedByEmail.php',
                   dataType: 'jsonp',
                   async: false,
                   jsonpCallback: 'jsoncallbackConnectedByEmail',
@@ -443,15 +436,16 @@
                 });                 
         }
         function sendPasswordByEmail() {
-                //alert('forgot-password-form');
                 $('.progress-bar-validation').show();
+                var email = $('#email_f');
+                if (!validateEmail(email.val())) { alert('Invalid Email Address');email.focus();return;}
                 var formId = '#forgot-password-form';
                 var form = $(formId); 
                 var params = form.serialize();
                 //alert(params);
                 $.ajax({
                   type: 'GET',
-                  url: 'http://54.169.245.192/kazo/script/gcm/connectedByEmail.php',
+                  url: 'http://54.169.245.192/kazo/connectedByEmail.php',
                   dataType: 'jsonp',
                   async: false,
                   jsonpCallback: 'jsoncallbackConnectedByEmail',
@@ -461,14 +455,26 @@
                 });                 
         }
         function registerByEmail() {
-                //alert('register-form');
                 var formId = '#register-form';
+                var firstname_r = $('#firstname_r');
+                var lastname_r = $('#lastname_r');
+                var mobile_r = $('#mobile_r');
+                var email = $('#email_r');
+                var password_r = $('#password_r');
+                var confirm_password_r = $('#confirm_password_r');
+                if(firstname_r.val() == ''){alert('Please enter your firstname');firstname_r.focus();return;}
+                if(lastname_r.val() == ''){alert('Please enter your lastname');lastname_r.focus();return;}
+                if(!validatePhone(mobile_r.val())){alert('Please enter a valid number');mobile_r.focus();return;}
+                if (!validateEmail(email.val())) { alert('Invalid Email Address');email.focus();return;}
+                if(password_r.val() == '' || password_r.val().length <6){alert('Please enter 6 or more characters.');password_r.focus();return;}
+                if(password_r.val() != confirm_password_r.val()){alert('Please make sure your passwords match');confirm_password_r.focus();return;}
+
                 var form = $(formId); 
                 var params = form.serialize();
                 alert(params);
                 $.ajax({
                   type: 'GET',
-                  url: 'http://54.169.245.192/kazo/script/gcm/connectedByEmail.php',
+                  url: 'http://54.169.245.192/kazo/connectedByEmail.php',
                   dataType: 'jsonp',
                   async: false,
                   jsonpCallback: 'jsoncallbackConnectedByEmail',
@@ -477,7 +483,26 @@
                   cache: false,
                 });                 
         }
-        
+        // Function that validates email address through a regular expression.
+        function validateEmail(sEmail) {
+            var filter = /^[\w\-\.\+]+\@[a-zA-Z0-9\.\-]+\.[a-zA-z0-9]{2,4}$/;
+            if (filter.test(sEmail)) {
+            return true;
+            }
+            else {
+            return false;
+            }
+        }
+        // Function that validates phone number through a regular expression.
+        function validatePhone(sPhone) {
+            var filter = /[0-9 -()+]+$/;
+            if (filter.test(sPhone) && (sPhone.length >= 10)) {
+            return true;
+            }
+            else {
+            return false;
+            }
+        }
         function jsoncallbackConnectedByEmail(data) {
             //alert('Recieved');
             var result1 = JSON.stringify(data);
