--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <link rel="apple-touch-icon" href="icon.png">
     </head>
     <body>
+    <div class="app">
         <div class="container" id="container">
             <iframe frameborder="0" id="MyIFrame" class="video loader-iframe"></iframe>       
             <div class="video loader-div">
@@ -114,7 +115,8 @@
         </div>
         <div class="container-offline" style="display:none">
             No network connection ...
-        </div>        
+        </div> 
+    </div>
         <script type="text/javascript" src="cordova.js"></script>  
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
